更新手机模板内容

--- a/.Archive/tplMobile手机版模板介绍.md/2017-02-17 11-54-16.md
+++ b/.Archive/tplMobile手机版模板介绍.md/2017-02-17 11-54-16.md
@@ -17,7 +17,7 @@
     
 ![](./_image/2017-02-16-18-13-39.jpg)
 1. reset.less（浏览器样式重置）；
-2. [animate.min.less](https://daneden.github.io/animate.css/) （动画类库）；
+2. animate.min.less （动画类库）；
 3. variable.less （样式变量的定义）
 4. common.less （公用样式和函数的）；
 5. private.less （本项目私有的样式和类）；
@@ -52,7 +52,7 @@
 - clean 清除压缩文件
 - build 项目整体压缩
 
-###移动端自适应解决方案 
+###前端自适应解决方案flexible.js 
 项目git地址：<https://github.com/amfe/lib-flexible#libflexible>
 参考文章：[使用Flexible实现手淘H5页面的终端适配](https://github.com/amfe/article/issues/17)
 使用方法：
@@ -89,12 +89,9 @@ div{
 ```
 编译后css如下：
 ```python
-div {
-  width: 3.2rem;
-  height: 1.6rem;
-}
+
 ```
-这样我们再也不用担心各种手机分辨率下的样式调整问题了
+
 
 3.**字体不使用rem的方法**
 字体的大小不推荐用rem作为单位。所以对于字体的设置，仍旧使用px作为单位，并配合用data-dpr属性来区分不同dpr下的的大小。
@@ -113,108 +110,3 @@ div {
     font-size: 36px;
 }
 ```
-###common.less中特别类的介绍
-1.**动画类函数**
-```python
-//动画样式
-.animation(@name,@duration,@speed,@number,@direction, @mode){
-animation: @name @duration @speed  @number @direction @mode;
--ms-animation:@name @duration @speed  @number @direction @mode;
--moz-animation:@name @duration @speed  @number @direction @mode;
--webkit-animation:@name @duration @speed  @number @direction @mode;
--o-animation:@name @duration @speed  @number @direction @mode;
-}
-```
-这样我们在是做动画的时候只需要这样去使用就行了
-```python
-
-//动画示例
-.animation{
-    from {
-    width:100px;
-    height:100px;
-    background-color:blue;
-  }
-  to {
-    width:300px;
-    height:300px;
-    background-color:red;
-  }
-}
-//定义动画
-@keyframes animation{ .animation}
-@-moz-keyframes animation{ .animation}
-@-webkit-keyframes animation { .animation}
-@-o-keyframes animation { .animation}
-.animation_demo{
-    //调用动画传递参数
-  .animation(animation,2s,ease-in-out,1,normal,forwards);
-}
-```
-2.**过度动画函数**
-```python
-//过度动画
-.transition(@property,@duration,@timing-function,@delay){
-  transition:@property @duration @timing-function @delay;
-  -ms-transition:@property @duration @timing-function @delay;
-  -moz-transition:@property @duration @timing-function @delay;
-  -webkit-transition:@property @duration @timing-function @delay;
-  -o-transition:@property @duration @timing-function @delay;
-}
-```
-这样我们在使用过度动画的时候就可以直接使用：
-```python
-//过度动画示例
-.transition_demo{
-  width:100px;
-  height:100px;
-  background-color:blue;
-  //调用过度动画传递相应的参数即可
-  .transition(all,2s,ease,0s);
-  &:hover{
-    width:300px;
-    height:300px;
-    background-color:red;
-  }
-}
-
-```
-3.单行文字溢出省略
-```python
-//单行文字溢出省略
-.single_text{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
-```
-4.多单行文字溢出省略
-```
-//多单行文字溢出省略
-.multi_text(@linenum){
-  overflow : hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp:@linenum;
-  -webkit-box-orient: vertical;
-}
-```
-5.input的placeholder颜色
-```
-//input的placeholder颜色
-.placeholder(@color: @input-color-placeholder){
-  &::-moz-placeholder           { color: @color; } // Firefox
-  &:-ms-input-placeholder       { color: @color; } // Internet Explorer 10+
-  &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
-}
-```
-6.透明度
-```python
-//透明度
-.opacity(@opacity){
-  opacity: @opacity;
-  // IE8 filter
-  @opacity-ie: (@opacity * 100);
-  filter: ~"alpha(opacity=@{opacity-ie})";
-}
-```
-###tplMoble使用实例：
-酷航H5游戏：
-项目地址：<https://git.oschina.net/kermityu/CoolAirH5.git>
-项目需要服务环境才能运行；
