--- a/.Archive/tplMobile手机版模板介绍.md/2017-02-17 12-02-07.md
+++ b/.Archive/tplMobile手机版模板介绍.md/2017-02-17 12-02-07.md
@@ -114,10 +114,29 @@ div {
 }
 ```
 ###common.less中特别类的介绍
-1.**动画类函数**
+1.动画类函数
 ```python
 //动画样式
 .animation(@name,@duration,@speed,@number,@direction, @mode){
+  //@name 动画的名称
+  //@duration 规定动画完成一个周期所花费的秒或毫秒
+  //@speed 规定动画完成一个周期所花费的秒或毫秒 
+          //linear (动画从头到尾的速度是相同的)
+          //ease (默认。动画以低速开始，然后加快，在结束前变慢。)
+          //ease-in (动画以低速开始。)
+          //ease-out (动画以低速结束。)
+          //ease-out (动画以低速结束。)
+          //ease-in-out (动画以低速开始和结束。)
+          //cubic-bezier(n,n,n,n) (在 cubic-bezier 函数中自己的值。可能的值是从 0 到 1 的数值。)
+  //@delay 定义动画开始前等待的时间，以秒或毫秒计
+  //@number 定义动画播放次数的数值 n 或 infinite（规定动画应该无限次播放）。 
+  //@direction 规定动画是否在下一周期逆向地播放。normal（默认值。动画应该正常播放。） alternate（动画应该轮流反向播放。）； 
+  //@State 规定动画是否在下一周期逆向地播放。 paused（规定动画已暂停。） running（规定动画正在播放。）； 
+  //@mode 规定动画是否在下一周期逆向地播放。  
+          //none(不改变默认行为。)
+          //forwards(当动画完成后，保持最后一个属性值（在最后一个关键帧中定义）)
+          //backwards(在 animation-delay 所指定的一段时间内，在动画显示之前，应用开始属性值（在第一个关键帧中定义）)
+          //both(向前和向后填充模式都被应用)
 animation: @name @duration @speed  @number @direction @mode;
 -ms-animation:@name @duration @speed  @number @direction @mode;
 -moz-animation:@name @duration @speed  @number @direction @mode;
@@ -125,96 +144,4 @@ animation: @name @duration @speed  @number @direction @mode;
 -o-animation:@name @duration @speed  @number @direction @mode;
 }
 ```
-这样我们在是做动画的时候只需要这样去使用就行了
-```python
 
-//动画示例
-.animation{
-    from {
-    width:100px;
-    height:100px;
-    background-color:blue;
-  }
-  to {
-    width:300px;
-    height:300px;
-    background-color:red;
-  }
-}
-//定义动画
-@keyframes animation{ .animation}
-@-moz-keyframes animation{ .animation}
-@-webkit-keyframes animation { .animation}
-@-o-keyframes animation { .animation}
-.animation_demo{
-    //调用动画传递参数
-  .animation(animation,2s,ease-in-out,1,normal,forwards);
-}
-```
-2.**过度动画函数**
-```python
-//过度动画
-.transition(@property,@duration,@timing-function,@delay){
-  transition:@property @duration @timing-function @delay;
-  -ms-transition:@property @duration @timing-function @delay;
-  -moz-transition:@property @duration @timing-function @delay;
-  -webkit-transition:@property @duration @timing-function @delay;
-  -o-transition:@property @duration @timing-function @delay;
-}
-```
-这样我们在使用过度动画的时候就可以直接使用：
-```python
-//过度动画示例
-.transition_demo{
-  width:100px;
-  height:100px;
-  background-color:blue;
-  //调用过度动画传递相应的参数即可
-  .transition(all,2s,ease,0s);
-  &:hover{
-    width:300px;
-    height:300px;
-    background-color:red;
-  }
-}
-
-```
-3.单行文字溢出省略
-```python
-//单行文字溢出省略
-.single_text{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
-```
-4.多单行文字溢出省略
-```
-//多单行文字溢出省略
-.multi_text(@linenum){
-  overflow : hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp:@linenum;
-  -webkit-box-orient: vertical;
-}
-```
-5.input的placeholder颜色
-```
-//input的placeholder颜色
-.placeholder(@color: @input-color-placeholder){
-  &::-moz-placeholder           { color: @color; } // Firefox
-  &:-ms-input-placeholder       { color: @color; } // Internet Explorer 10+
-  &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
-}
-```
-6.透明度
-```python
-//透明度
-.opacity(@opacity){
-  opacity: @opacity;
-  // IE8 filter
-  @opacity-ie: (@opacity * 100);
-  filter: ~"alpha(opacity=@{opacity-ie})";
-}
-```
-###tplMoble使用实例：
-酷航H5游戏：
-项目地址：<https://git.oschina.net/kermityu/CoolAirH5.git>
-项目需要服务环境才能运行；
