--- a/.Archive/tplMobile手机版模板介绍.md/2017-02-17 12-06-07.md
+++ b/.Archive/tplMobile手机版模板介绍.md/2017-02-17 12-06-07.md
@@ -162,59 +162,4 @@ animation: @name @duration @speed  @number @direction @mode;
   -o-transition:@property @duration @timing-function @delay;
 }
 ```
-这样我们在使用过度动画的时候就可以直接使用：
-```python
-//过度动画示例
-.transition_demo{
-  width:100px;
-  height:100px;
-  background-color:blue;
-  //调用过度动画传递相应的参数即可
-  .transition(all,2s,ease,0s);
-  &:hover{
-    width:300px;
-    height:300px;
-    background-color:red;
-  }
-}
-
-```
-3.单行文字溢出省略
-```python
-//单行文字溢出省略
-.single_text{overflow:hidden;text-overflow:ellipsis;white-space:nowrap;}
-```
-4.多单行文字溢出省略
-```
-//多单行文字溢出省略
-.multi_text(@linenum){
-  overflow : hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp:@linenum;
-  -webkit-box-orient: vertical;
-}
-```
-5.input的placeholder颜色
-```
-//input的placeholder颜色
-.placeholder(@color: @input-color-placeholder){
-  &::-moz-placeholder           { color: @color; } // Firefox
-  &:-ms-input-placeholder       { color: @color; } // Internet Explorer 10+
-  &::-webkit-input-placeholder  { color: @color; } // Safari and Chrome
-}
-```
-6.透明度
-```python
-//透明度
-.opacity(@opacity){
-  opacity: @opacity;
-  // IE8 filter
-  @opacity-ie: (@opacity * 100);
-  filter: ~"alpha(opacity=@{opacity-ie})";
-}
-```
-###tplMoble使用实例：
-酷航H5游戏：
-项目地址：<https://git.oschina.net/kermityu/CoolAirH5.git>
-项目需要服务环境才能运行；
+这样我们在使用过度动画的时候
