--- a/.Archive/tplMobile手机版模板介绍.md/2017-02-17 14-00-03.md
+++ b/.Archive/tplMobile手机版模板介绍.md/2017-02-17 14-00-03.md
@@ -214,7 +214,4 @@ animation: @name @duration @speed  @number @direction @mode;
   filter: ~"alpha(opacity=@{opacity-ie})";
 }
 ```
-###tplMoble使用实例：
-酷航H5游戏：
-项目地址：<https://git.oschina.net/kermityu/CoolAirH5.git>
-项目需要服务环境才能运行；
+###tplMoble使用
